# minigitree

./: .gitignore  CMakeLists.txt  README.md
design/: architecture.md
src/: main.cpp
src/cli/: command_handler.cpp  command_handler.h  init_command.cpp  init_command.h  list_command.cpp  list_command.h  restore_command.cpp  restore_command.h  show_command.cpp  show_command.h  snapshot_command.cpp  snapshot_command.h
src/core/: object_storage.cpp  object_storage.h  repository.cpp  repository.h  restore_engine.cpp  restore_engine.h  snapshot_manager.cpp  snapshot_manager.h  tree_builder.cpp  tree_builder.h
src/models/: blob.cpp  blob.h  snapshot.cpp  snapshot.h  tree.cpp  tree.h
src/utils/: filesystem.cpp  filesystem.h  hash_utils.cpp  hash_utils.h  string_utils.cpp  string_utils.h
